--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <span>⚫</span>
             <span>SUN</span>
             <span>⚫</span>
-            <span>SUN.</span>
+            <span>SUN</span>
 
 
 
