added figs page

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <title>sun figs and the fish shop</title>
+    <link rel="shortcut icon" href="images/sun.png" type="image/x-icon">
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -11,22 +12,22 @@
         <h1> SMALL PLEASURES </h1>
         <ul class="header-title">
             <li class="sun_title">
-                <a href="#" class="big-link-title">SUN</a>
-                <img src="" class="hovering-image hovering-sun">
+                <a href="sun" class="big-link-title">SUN</a>
+
             </li>
             <li class="figs_title">
                 <a href="#" class="big-link-title">FIGS</a>
-                <img src="" class="hovering-image hovering-figs">
+
             </li>
             <li class="fish_title">
                 <a href="#" class="big-link-title">THE FISH SHOP</a>
-                <img src="" class="hovering-image hovering-fish">
+
             </li>
 
         </ul>
     </header>
     <div class="content">
-        <h2 class="sun"> SUN </h2>
+        <h2 id="sun"> SUN </h2>
         <div class="flexbox-1">
             <div class="article-sun-1">
                 <p>In a joking tone, some of us occasionally describe ourselves as ‘sun worshippers’. That can mean, that we love to tan, visit an island, go to the beach, read a book, sip a drink and perhaps play volleyball. The problem with this approach
@@ -61,7 +62,7 @@
     <div class="monet">
         <img class="monetimg" src="images/2560px-Monet_-_Impression,_Sunrise.jpg">
         <div class="monet-text">
-            <b>Impression</b>, Claude Monet, Year: 1872, Medium: Oil on canvas
+            <b>Impression</b>, Claude Monet, 1872, Oil on canvas
         </div>
     </div>
     <div class="flexbox-2">
@@ -89,7 +90,7 @@
     <div class="Michelangelo">
         <img class="michelangeloimg" src="images/Michelangelo,_Creation_of_the_Sun,_Moon,_and_Plants_01.jpg">
         <div class="Michelangelo-text">
-            <b>Creation of the Sun, Moon, and Plants</b>, Michelangelo, Year: 1511, <br> Medium: Oil on canvas
+            <b>Creation of the Sun, Moon, and Plants</b>, Michelangelo, 1511, Oil on canvas
         </div>
     </div>
     <div class="flexbox-3">
@@ -149,6 +150,8 @@
 
         </div>
     </div>
+
+
 
 </footer>
 
