--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             </li>
             <li class="figs_title">
-                <a href="#" class="big-link-title">FIGS</a>
+                <a href="C:\Users\neta2\Desktop\sites\sun_figs_and_the_fish_shop\figs.html" class="big-link-title">FIGS</a>
 
             </li>
             <li class="fish_title">
