--- a/index.html
+++ b/index.html
@@ -127,23 +127,23 @@
     <div class="marquee">
         <div class="marquee-inner">
             <span>SUN</span>
-            <span>⚫</span>
+            <span>-</span>
             <span>SUN</span>
-            <span>⚫</span>
+            <span>-</span>
             <span>SUN</span>
-            <span>⚫</span>
+            <span>-</span>
             <span>SUN</span>
-            <span>⚫</span>
+            <span>-</span>
             <span>SUN</span>
-            <span>⚫</span>
+            <span>-</span>
             <span>SUN</span>
-            <span>⚫</span>
+            <span>-</span>
             <span>SUN</span>
-            <span>⚫</span>
+            <span>-</span>
             <span>SUN</span>
-            <span>⚫</span>
+            <span>-</span>
             <span>SUN</span>
-            <span>⚫</span>
+            <span>-</span>
             <span>SUN</span>
 
 
