--- a/figs.html
+++ b/figs.html
@@ -131,23 +131,42 @@
     <div class="marquee marquee-figs">
         <div class="marquee-inner marquee-inner-figs">
             <span>FIGS</span>
-            <span>⚫</span>
+
             <span>FIGS</span>
-            <span>⚫</span>
+
             <span>FIGS</span>
-            <span>⚫</span>
+
             <span>FIGS</span>
-            <span>⚫</span>
+
             <span>FIGS</span>
-            <span>⚫</span>
+
             <span>FIGS</span>
-            <span>⚫</span>
+
             <span>FIGS</span>
-            <span>⚫</span>
+
             <span>FIGS</span>
-            <span>⚫</span>
+
             <span>FIGS</span>
-            <span>⚫</span>
+
+            <span>FIGS</span>
+            <span>FIGS</span>
+
+            <span>FIGS</span>
+
+            <span>FIGS</span>
+
+            <span>FIGS</span>
+
+            <span>FIGS</span>
+
+            <span>FIGS</span>
+
+            <span>FIGS</span>
+
+            <span>FIGS</span>
+
+            <span>FIGS</span>
+
             <span>FIGS</span>
 
 
