--- a/index.html
+++ b/index.html
@@ -9,23 +9,51 @@
 
 <body>
     <header>
-        <h1> SMALL PLEASURES </h1>
+        <h1 class="topbar"> SMALL PLEASURES </h1>
         <ul class="header-title">
             <li class="sun_title">
-                <a href="sun" class="big-link-title">SUN</a>
+                <a href="sun" class="big-link-title">Sun</a>
 
             </li>
             <li class="figs_title">
-                <a href="C:\Users\neta2\Desktop\sites\sun_figs_and_the_fish_shop\figs.html" class="big-link-title">FIGS</a>
+                <a href="C:\Users\neta2\Desktop\sites\sun_figs_and_the_fish_shop\figs.html" class="big-link-title">Figs</a>
 
             </li>
             <li class="fish_title">
-                <a href="#" class="big-link-title">THE FISH SHOP</a>
+                <a href="#" class="big-link-title">The fish shop</a>
 
             </li>
 
         </ul>
     </header>
+    <div class="marquee">
+        <div class="marquee-inner">
+            <span>SUN</span>
+
+            <span>SUN</span>
+
+            <span>SUN</span>
+
+            <span>SUN</span>
+
+            <span>SUN</span>
+
+            <span>SUN</span>
+
+            <span>SUN</span>
+
+            <span>SUN</span>
+
+            <span>SUN</span>
+
+            <span>SUN</span>
+
+
+
+        </div>
+    </div>
+
+
     <div class="content">
         <h2 id="sun"> SUN </h2>
         <div class="flexbox-1">
@@ -123,36 +151,100 @@
     </div>
     </div>
 </body>
-<footer>
-    <div class="marquee">
-        <div class="marquee-inner">
-            <span>SUN</span>
-            <span>-</span>
-            <span>SUN</span>
-            <span>-</span>
-            <span>SUN</span>
-            <span>-</span>
-            <span>SUN</span>
-            <span>-</span>
-            <span>SUN</span>
-            <span>-</span>
-            <span>SUN</span>
-            <span>-</span>
-            <span>SUN</span>
-            <span>-</span>
-            <span>SUN</span>
-            <span>-</span>
-            <span>SUN</span>
-            <span>-</span>
-            <span>SUN</span>
+<div class="marquee">
+    <div class="marquee-inner">
+        <span>SUN</span>
+
+        <span>SUN</span>
+
+        <span>SUN</span>
+
+        <span>SUN</span>
+
+        <span>SUN</span>
+
+        <span>SUN</span>
+
+        <span>SUN</span>
+
+        <span>SUN</span>
+
+        <span>SUN</span>
+
+        <span>SUN</span>
+
+        <span>SUN</span>
+
+        <span>SUN</span>
+
+        <span>SUN</span>
+
+        <span>SUN</span>
+
+        <span>SUN</span>
+
+        <span>SUN</span>
+
+        <span>SUN</span>
+
+        <span>SUN</span>
+
+        <span>SUN</span>
+
+        <span>SUN</span>
 
 
 
-        </div>
     </div>
+</div>
+<div class="marquee marquee-figs">
+    <div class="marquee-inner marquee-inner-figs">
+        <span>FIGS</span>
+
+        <span>FIGS</span>
+
+        <span>FIGS</span>
+
+        <span>FIGS</span>
+
+        <span>FIGS</span>
+
+        <span>FIGS</span>
+
+        <span>FIGS</span>
+
+        <span>FIGS</span>
+
+        <span>FIGS</span>
+
+        <span>FIGS</span>
+
+        <span>FIGS</span>
+
+        <span>FIGS</span>
+
+        <span>FIGS</span>
+
+        <span>FIGS</span>
+
+        <span>FIGS</span>
+
+        <span>FIGS</span>
+
+        <span>FIGS</span>
+
+        <span>FIGS</span>
+
+        <span>FIGS</span>
+
+        <span>FIGS</span>
 
 
 
-</footer>
+    </div>
+</div>
+
+
+
 
 </html>
