--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
 <html>
 
 <head>
-    <title>sun figs and the fish shop</title>
-    <link rel="shortcut icon" href="images/sun.png" type="image/x-icon">
+    <title>SMALL PLEASURES</title>
+    <link rel="shortcut icon" href="images/gem.png" type="image/x-icon">
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
-        <h1 class="topbar"> SMALL PLEASURES </h1>
-        <ul class="header-title">
-            <li class="sun_title">
-                <a href="#sun" class="big-link-title">Sun</a>
+        <h1 class="topbar">
+            <a href="#sun_title">SMALL PLEASURES</a>
 
+        </h1>
+
+        <ul class="header-title">
+            <li id="sun_title">
+                <a href="#sun" class="big-link-title">SUN</a>
             </li>
             <li class="figs_title">
-                <a href="#figs" class="big-link-title">Figs</a>
+                <a href="#figs" class="big-link-title">FIGS</a>
 
             </li>
             <li class="fish_title">
-                <a href="#" class="big-link-title">The fish shop</a>
+                <a href="#The_fish_shop" class="big-link-title">THE FISH SHOP</a>
 
             </li>
 
@@ -28,6 +31,14 @@
     </header>
     <div class="marquee">
         <div class="marquee-inner">
+            <span>SUN</span>
+
+            <span>SUN</span>
+
+            <span>SUN</span>
+
+            <span>SUN</span>
+
             <span>SUN</span>
 
             <span>SUN</span>
@@ -333,9 +344,9 @@
             <p>The ritual reminds us what to do in order to have a nicer time. It operates with a benign idea of rules and regulations. They’re not, in this case, to stop us doing something that might be rather convenient at this moment. Instead they guide
                 us to having a better time. This approach to rules is a revision of the Romantic ideal of spontaneity, the luck moment, which is excited by ideas of happy accidents and chance encounters. It’s not that these are always terrible ideas at
                 all. It’s just that they aren’t the only template we need. If we only follow them a lot of good things won’t happen, or will happen only very rarely, when your sister just happens to take it into her head to ask you round to lunch.</p>
-            <p>TSmall pleasures need rituals. The irony (as it were) of the small pleasure is that it isn’t intense enough usually to force itself upon us – we don’t become addicted or obsessed; the pull is much weaker than that of sex or video games or
-                drinking wine or wolfing down a bar of chocolate; these are pleasures we need no reminding of, and we often have to painfully struggle to limit their sway in our lives. With small pleasures it’s the opposite. We are more likely to lose
-                touch with them. They easily get crowded out. We actively need to build up their presence in our lives.</p>
+            <p>Small pleasures need rituals. The irony (as it were) of the small pleasure is that it isn’t intense enough usually to force itself upon us – we don’t become addicted or obsessed; the pull is much weaker than that of sex or video games or drinking
+                wine or wolfing down a bar of chocolate; these are pleasures we need no reminding of, and we often have to painfully struggle to limit their sway in our lives. With small pleasures it’s the opposite. We are more likely to lose touch with
+                them. They easily get crowded out. We actively need to build up their presence in our lives.</p>
         </div>
 
         <div class="facts-sun3 facts-figs3">
@@ -369,7 +380,6 @@
             <span>FIGS</span>
 
             <span>FIGS</span>
-            <span>FIGS</span>
 
             <span>FIGS</span>
 
@@ -380,18 +390,253 @@
             <span>FIGS</span>
 
             <span>FIGS</span>
+
             <span>FIGS</span>
+
             <span>FIGS</span>
+
             <span>FIGS</span>
+
+            <span>FIGS</span>
+
             <span>FIGS</span>
 
 
 
         </div>
+    </div>
+
+    <div class="marquee">
+        <div class="marquee-inner">
+            <span>the fish shop</span>
+            <span>the fish shop</span>
+            <span>the fish shop</span>
+            <span>the fish shop</span>
+            <span>the fish shop</span>
+            <span>the fish shop</span>
+            <span>the fish shop</span>
+            <span>the fish shop</span>
+            <span>the fish shop</span>
+            <span>the fish shop</span>
+            <span>the fish shop</span>
+            <span>the fish shop</span>
+            <span>the fish shop</span>
+            <span>the fish shop</span>
+            <span>the fish shop</span>
+            <span>the fish shop</span>
 
 
 
-</footer>
+
+
+
+
+        </div>
+    </div>
+
+
+
+    </div>
+    <div class="content">
+        <h2 id="The_fish_shop">THE FISH SHOP</h2>
+        <div class="flexbox-1">
+            <div class="article-sun-1 article-figs-1 article-fish-1">
+                <p>The fishmonger’s window display is alluring, yet one doesn’t normally go in. But when one does, one wonders why one doesn’t visit more often.</p>
+                <p>Waiting to be served one is struck by the beauty and strangeness of the fish and sea creatures on offer on the beds of ice: the oyster that somehow generates its own home, rocky on the outside, suggestively smooth and polished within.
+                    For a moment one contemplates the destiny of the sole, one of whose eyes has to migrate round its head on the path to maturity and the monkfish whose huge, toothy mouth and puny body are repellent to look at but whose flesh is delicious
+                    when roasted and drizzled with olive oil. </p>
+                <p class="big"> Imagine spending this thing called life embodied in a lobster, encountering the world through its tiny peppercorn eyes, which offer a field of vision much wider but less focused than ours.</p>
+                <p>They seem so alien. But – in a universe composed almost entirely of gas and rock circulating in the endless nothingness of space – we are their cousins, with whom we briefly cohabit the surface zones of Earth. In the recent history of
+                    the cosmos we shared common ancestors, whose progeny became diversely the octopus, the sea bream or evolved gradually into solicitors, psychotherapists and graphic designers.</p>
+                <p> Imagine spending this thing called life embodied in a lobster, encountering the world through its tiny peppercorn eyes, which offer a field of vision much wider but less focused than ours. There would have been the momentous day one dug
+                    a burrow beneath a basalt rock in the soft mud of the sea floor in Fidden bay, off the Isle of Mull. Then there would have been the drama of shedding our exoskeleton. We would have had to master the laborious process of reproduction,
+                    when the male has to pierce the female’s stomach to deposit his spermatophores. Finally there was the catastrophic curiosity that two days ago tempted us into a lobster pot. </p>
+            </div>
+
+            <div class="facts-sun1 facts-figs1 facts-fish1">
+                <ul class="facts-sun facts-figs facts-fish">
+                    <li>
+                        <p><b>1.</b><br> The biggest fish on the planet is a whale shark.</p>
+                    </li>
+
+                    <li>
+                        <p><b>2.</b><br>American Lobsters have longer life spans than both cats and dogs, living over 20 years.</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+    </div>
+    <div class="monet Miss_May Velázquez">
+        <img class="monetimg Miss_Mayimg Velázquez_img" src="images/Cristo_en_casa_de_Marta_y_María,_by_Diego_Velázquez.jpg">
+        <div class="monet-text Miss_Maytext Velázqueztext">
+            <b>Kitchen Scene with Christ in the House of Martha and Mary,</b> Diego Velázquez, 1618
+        </div>
+    </div>
+    <div class="flexbox-2">
+        <div class="article-sun-2 article-figs-2">
+            <p>The fish shop isn’t simply a place to pick up calamari rings or some cod steaks, it is also a place of re-enchantment. We suffer a fatally easy tendency to become jaded. Things that are familiar lose their power to entice the imagination.
+                Then, looking into the eye of a mullet, or contemplating the internal architecture of a skate fin, one is reconnected with the elegant and bizarre inventiveness of nature. We’ve been too hasty, we’ve overlooked almost everything. The world
+                is full of fascination, there is so much to be explored. And we have been led to this renewed appetite by the head of a fish.</p>
+            <p>Each item has been gathered from the chambers of the sea, distant rivers, or prised from submerged rocks. The speckled trout were reared in a former gravel pit in Lincolnshire. The mackerel was caught by a trawler on the Dogger Bank and landed
+                at Peterhead. The sea bass was hauled onto the cobbled pier at Crail and speeded in a refrigerated van down the M90 and the A1(M) with a brief halt in the HGV parking lot at Wetherby Service Station.</p>
+            <p class="big">There is a potential future version of oneself – who starts to come to life in the fishmonger – who lives on light, nutritious fishy meals and whose brain is bathed in their sympathetic briney fluids.
+            </p>
+            </p>
+            <p>And here they all are cleansed, gutted, chilled, artfully arranged. Nature has been civilised and made attractive by ice, metal, glass, tiles, slabs of marble and by constant cold water and the sharpest knives. The fish shop hints at an ideal
+                that we would like perhaps to pursue more broadly: the sense that trouble has been rinsed away, and the desirable good bit will be delivered into your life neatly wrapped in delicately glazed white paper.</p>
+        </div>
+        <div class="facts-sun2 facts-figs2 facts-fish3">
+            <ul class="facts-sun-2 facts-figs-2 facts-fish-2">
+                <li>
+                    <p><b>3.</b><br>fish can get sunburn, but it is unusual unless there is something about their environment that does not allow them to seek deeper water or some kind of shelter.</p>
+                </li>
+                <li>
+                    <p><b>4.</b><br>the Antarctic ice fish, which have antifreeze in their blood, live permanently at -1°C.</p>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="Michelangelo Adriaen Winslow">
+        <img class="michelangeloimg Adriaenimg Winslowimg" src="images/Winslow_Homer_-_A_Basket_of_Clams.jpg">
+        <div class="Michelangelo-text Adriaen-text Winslow-text">
+            <b>A Basket of Clams </b>, Winslow Homer, 1873
+        </div>
+    </div>
+    <div class="flexbox-3">
+        <div class="article-sun-3 article-figs-3 article-fish-3">
+            <p class="big">but if one took slightly more care around eating, even if lots of bits of one’s life were bad, if one could come in here and get some sole wrapped up by the man in the blue apron and go home, and take the art of living more seriously, then
+                one would be closer to being the person one should always have been.</p>
+            </p>
+            <p>Visiting the fishmonger leads one to sketch little plans of moral reform: in another, slightly better, life, one would go there all the time. We’d become adept at preparing certain dishes. Being here, one makes fleeting, initial contact with
+                a latent self who poaches salmon, tosses a lobster salad, drizzles olive oil and whose friends come round for Bouillabaisse. There is a potential future version of oneself – who starts to come to life in the fishmonger – who lives on light,
+                nutritious fishy meals and whose brain is bathed in their sympathetic briney fluids. Life as a whole will remain radically imperfect, one knows, but if one took slightly more care around eating, even if lots of bits of one’s life were
+                bad, if one could come in here and get some sole wrapped up by the man in the blue apron and go home, and take the art of living more seriously, then one would be closer to being the person one should always have been. The fish-shop pleasure
+                originates in very small points of departure – the smell of the salt and water, the frigid air wafting from the beds of ice, the silvery skin of an Atlantic Salmon – and grows into a large idea: respect for civilisations that have more
+                time for things that are simultaneously delightful and wholesome.</p>
+        </div>
+
+        <div class="facts-sun3 facts-figs3 facts-fish3">
+            <ul class="facts-sun-3 facts-figs-3 facts-fish-3">
+                <li><b>5.</b><br>Catfish have over 27,000 taste buds, whereas humans have only 9,000.</li>
+            </ul>
+        </div>
+    </div>
+    </div>
+    </div>
+    </body>
+    <footer>
+        <div class="marquee">
+            <div class="marquee-inner">
+                <span>SUN</span>
+
+                <span>SUN</span>
+
+                <span>SUN</span>
+
+                <span>SUN</span>
+
+                <span>SUN</span>
+
+                <span>SUN</span>
+
+                <span>SUN</span>
+
+                <span>SUN</span>
+
+                <span>SUN</span>
+
+                <span>SUN</span>
+
+                <span>SUN</span>
+
+                <span>SUN</span>
+
+                <span>SUN</span>
+
+                <span>SUN</span>
+
+
+
+            </div>
+        </div>
+        <div class="marquee marquee-figs">
+            <div class="marquee-inner marquee-inner-figs">
+                <span>FIGS</span>
+
+                <span>FIGS</span>
+
+                <span>FIGS</span>
+
+                <span>FIGS</span>
+
+                <span>FIGS</span>
+
+                <span>FIGS</span>
+
+                <span>FIGS</span>
+
+                <span>FIGS</span>
+
+                <span>FIGS</span>
+
+                <span>FIGS</span>
+
+                <span>FIGS</span>
+
+                <span>FIGS</span>
+
+                <span>FIGS</span>
+
+                <span>FIGS</span>
+
+                <span>FIGS</span>
+
+                <span>FIGS</span>
+
+                <span>FIGS</span>
+
+                <span>FIGS</span>
+
+                <span>FIGS</span>
+
+                <span>FIGS</span>
+
+
+
+            </div>
+        </div>
+        <div class="marquee">
+            <div class="marquee-inner">
+                <span>the fish shop</span>
+                <span>the fish shop</span>
+                <span>the fish shop</span>
+                <span>the fish shop</span>
+                <span>the fish shop</span>
+                <span>the fish shop</span>
+                <span>the fish shop</span>
+                <span>the fish shop</span>
+                <span>the fish shop</span>
+                <span>the fish shop</span>
+                <span>the fish shop</span>
+                <span>the fish shop</span>
+                <span>the fish shop</span>
+                <span>the fish shop</span>
+                <span>the fish shop</span>
+                <span>the fish shop</span>
+
+
+
+
+
+
+
+            </div>
+        </div>
+
+
+
+    </footer>
 
 
 
