--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <link rel="shortcut icon" href="images/gem.png" type="image/x-icon">
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@1,300;1,600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@1,600;1,700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -15,15 +21,15 @@
         </h1>
 
         <ul class="header-title">
-            <li id="sun_title">
-                <a href="#sun" class="big-link-title">SUN</a>
+            <li id="sun_title" class="sun_title">
+                <a href="#sun" class="big-link-title">Sun</a>
             </li>
             <li class="figs_title">
-                <a href="#figs" class="big-link-title">FIGS</a>
+                <a href="#figs" class="big-link-title">Figs</a>
 
             </li>
             <li class="fish_title">
-                <a href="#The_fish_shop" class="big-link-title">THE FISH SHOP</a>
+                <a href="#The_fish_shop" class="big-link-title">The fish shop</a>
 
             </li>
 
@@ -31,33 +37,25 @@
     </header>
     <div class="marquee">
         <div class="marquee-inner">
-            <span>SUN</span>
+            <span>Sun</span>
+            <span>Sun</span>
+            <span>Sun</span>
+            <span>Sun</span>
+            <span>Sun</span>
+            <span>Sun</span>
+            <span>Sun</span>
+            <span>Sun</span>
+            <span>Sun</span>
+            <span>Sun</span>
+            <span>Sun</span>
+            <span>Sun</span>
+            <span>Sun</span>
+            <span>Sun</span>
+            <span>Sun</span>
+            <span>Sun</span>
 
-            <span>SUN</span>
 
-            <span>SUN</span>
 
-            <span>SUN</span>
-
-            <span>SUN</span>
-
-            <span>SUN</span>
-
-            <span>SUN</span>
-
-            <span>SUN</span>
-
-            <span>SUN</span>
-
-            <span>SUN</span>
-
-            <span>SUN</span>
-
-            <span>SUN</span>
-
-            <span>SUN</span>
-
-            <span>SUN</span>
 
 
 
@@ -66,7 +64,7 @@
 
 
     <div class="content">
-        <h2 id="sun">SUN</h2>
+        <h2 id="sun" class="suntitle">Sun</h2>
         <div class="flexbox-1">
             <div class="article-sun-1">
                 <p>In a joking tone, some of us occasionally describe ourselves as ‘sun worshippers’. That can mean, that we love to tan, visit an island, go to the beach, read a book, sip a drink and perhaps play volleyball. The problem with this approach
@@ -101,7 +99,7 @@
     <div class="monet">
         <img class="monetimg" src="images/2560px-Monet_-_Impression,_Sunrise.jpg">
         <div class="monet-text">
-            <b>Impression</b>, Claude Monet, 1872, Oil on canvas
+            <b>Impression</b><br> Claude Monet, 1872
         </div>
     </div>
     <div class="flexbox-2">
@@ -129,7 +127,7 @@
     <div class="Michelangelo">
         <img class="michelangeloimg" src="images/Michelangelo,_Creation_of_the_Sun,_Moon,_and_Plants_01.jpg">
         <div class="Michelangelo-text">
-            <b>Creation of the Sun, Moon, and Plants</b>, Michelangelo, 1511, Oil on canvas
+            <b>Creation of the Sun, Moon, and Plants</b><br> Michelangelo, 1511
         </div>
     </div>
     <div class="flexbox-3">
@@ -164,101 +162,48 @@
 </body>
 <div class="marquee">
     <div class="marquee-inner">
-        <span>SUN</span>
-
-        <span>SUN</span>
-
-        <span>SUN</span>
-
-        <span>SUN</span>
-
-        <span>SUN</span>
-
-        <span>SUN</span>
-
-        <span>SUN</span>
-
-        <span>SUN</span>
-
-        <span>SUN</span>
-
-        <span>SUN</span>
-
-        <span>SUN</span>
-
-        <span>SUN</span>
-
-        <span>SUN</span>
-
-        <span>SUN</span>
-
-        <span>SUN</span>
-
-        <span>SUN</span>
-
-        <span>SUN</span>
-
-        <span>SUN</span>
-
-        <span>SUN</span>
-
-        <span>SUN</span>
-
-
-
+        <span>Sun</span>
+        <span>Sun</span>
+        <span>Sun</span>
+        <span>Sun</span>
+        <span>Sun</span>
+        <span>Sun</span>
+        <span>Sun</span>
+        <span>Sun</span>
+        <span>Sun</span>
+        <span>Sun</span>
+        <span>Sun</span>
+        <span>Sun</span>
+        <span>Sun</span>
+        <span>Sun</span>
+        <span>Sun</span>
+        <span>Sun</span>
     </div>
 </div>
 <div class="marquee marquee-figs">
     <div class="marquee-inner marquee-inner-figs">
-        <span>FIGS</span>
-
-        <span>FIGS</span>
-
-        <span>FIGS</span>
-
-        <span>FIGS</span>
-
-        <span>FIGS</span>
-
-        <span>FIGS</span>
-
-        <span>FIGS</span>
-
-        <span>FIGS</span>
-
-        <span>FIGS</span>
-
-        <span>FIGS</span>
-
-        <span>FIGS</span>
-
-        <span>FIGS</span>
-
-        <span>FIGS</span>
-
-        <span>FIGS</span>
-
-        <span>FIGS</span>
-
-        <span>FIGS</span>
-
-        <span>FIGS</span>
-
-        <span>FIGS</span>
-
-        <span>FIGS</span>
-
-        <span>FIGS</span>
-
-
-
+        <span>Figs</span>
+        <span>Figs</span>
+        <span>Figs</span>
+        <span>Figs</span>
+        <span>Figs</span>
+        <span>Figs</span>
+        <span>Figs</span>
+        <span>Figs</span>
+        <span>Figs</span>
+        <span>Figs</span>
+        <span>Figs</span>
+        <span>Figs</span>
+        <span>Figs</span>
+        <span>Figs</span>
+        <span>Figs</span>
     </div>
 </div>
 
 <body>
 
     <div class="content">
-        <h2 id="figs">FIGS</h2>
+        <h2 id="figs" class="figstitle">Figs</h2>
         <div class="flexbox-1">
             <div class="article-sun-1 article-figs-1">
                 <p>Every so often, you encounter a fig. It might turn up as a decorative aside to a dessert at a smart restaurant you occasionally go to when you want to mark a special occasion; from a couple of years back you remember there were baskets
@@ -289,7 +234,7 @@
     <div class="monet Miss_May">
         <img class="monetimg Miss_Mayimg" src="images/Vintage_illustrations_by_Miss_May_Rivers_digitally_enhanced_by_rawpixel_66.jpg">
         <div class="monet-text Miss_Maytext">
-            <b>The fruit grower's guide : Vintage illustration of figs,</b> May Rivers, 1894
+            <b>The fruit grower's guide : Vintage illustration of figs</b><br> May Rivers, 1894
         </div>
     </div>
     <div class="flexbox-2">
@@ -323,7 +268,7 @@
     <div class="Michelangelo Adriaen">
         <img class="michelangeloimg Adriaenimg" src="images/Banquet_Still_Life,_Adriaen_van_Utrecht,_1644_-_Rijksmuseum.jpg">
         <div class="Michelangelo-text Adriaen-text">
-            <b>Banquet Still Life </b>, Adriaen van Utrecht, 1644, Oil on canvas
+            <b>Banquet Still Life </b><br>Adriaen van Utrecht, 1644
         </div>
     </div>
     <div class="flexbox-3">
@@ -361,76 +306,44 @@
 <footer>
     <div class="marquee marquee-figs">
         <div class="marquee-inner marquee-inner-figs">
-            <span>FIGS</span>
-
-            <span>FIGS</span>
-
-            <span>FIGS</span>
-
-            <span>FIGS</span>
-
-            <span>FIGS</span>
-
-            <span>FIGS</span>
-
-            <span>FIGS</span>
-
-            <span>FIGS</span>
-
-            <span>FIGS</span>
-
-            <span>FIGS</span>
-
-            <span>FIGS</span>
-
-            <span>FIGS</span>
-
-            <span>FIGS</span>
-
-            <span>FIGS</span>
-
-            <span>FIGS</span>
-
-            <span>FIGS</span>
-
-            <span>FIGS</span>
-
-            <span>FIGS</span>
-
-            <span>FIGS</span>
-
-            <span>FIGS</span>
-
-
-
+            <span>Figs</span>
+            <span>Figs</span>
+            <span>Figs</span>
+            <span>Figs</span>
+            <span>Figs</span>
+            <span>Figs</span>
+            <span>Figs</span>
+            <span>Figs</span>
+            <span>Figs</span>
+            <span>Figs</span>
+            <span>Figs</span>
+            <span>Figs</span>
+            <span>Figs</span>
+            <span>Figs</span>
+            <span>Figs</span>
         </div>
     </div>
 
     <div class="marquee">
         <div class="marquee-inner">
-            <span>the fish shop</span>
-            <span>the fish shop</span>
-            <span>the fish shop</span>
-            <span>the fish shop</span>
-            <span>the fish shop</span>
-            <span>the fish shop</span>
-            <span>the fish shop</span>
-            <span>the fish shop</span>
-            <span>the fish shop</span>
-            <span>the fish shop</span>
-            <span>the fish shop</span>
-            <span>the fish shop</span>
-            <span>the fish shop</span>
-            <span>the fish shop</span>
-            <span>the fish shop</span>
-            <span>the fish shop</span>
-
-
-
-
-
-
-
+            <span>The Fish Shop</span>
+            <span>The Fish Shop</span>
+            <span>The Fish Shop</span>
+            <span>The Fish Shop</span>
+            <span>The Fish Shop</span>
+            <span>The Fish Shop</span>
+            <span>The Fish Shop</span>
+            <span>The Fish Shop</span>
+            <span>The Fish Shop</span>
+            <span>The Fish Shop</span>
+            <span>The Fish Shop</span>
+            <span>The Fish Shop</span>
+            <span>The Fish Shop</span>
+            <span>The Fish Shop</span>
+            <span>The Fish Shop</span>
+            <span>The Fish Shop</span>
+            <span>The Fish Shop</span>
+            <span>The Fish Shop</span>
         </div>
     </div>
 
@@ -438,7 +351,7 @@
 
     </div>
     <div class="content">
-        <h2 id="The_fish_shop">THE FISH SHOP</h2>
+        <h2 id="The_fish_shop" class="fishshop_title">The fish shop</h2>
         <div class="flexbox-1">
             <div class="article-sun-1 article-figs-1 article-fish-1">
                 <p>The fishmonger’s window display is alluring, yet one doesn’t normally go in. But when one does, one wonders why one doesn’t visit more often.</p>
@@ -470,7 +383,7 @@
     <div class="monet Miss_May Velázquez">
         <img class="monetimg Miss_Mayimg Velázquez_img" src="images/Cristo_en_casa_de_Marta_y_María,_by_Diego_Velázquez.jpg">
         <div class="monet-text Miss_Maytext Velázqueztext">
-            <b>Kitchen Scene with Christ in the House of Martha and Mary,</b> Diego Velázquez, 1618
+            <b>Kitchen Scene with Christ in the House of Martha and Mary</b><br> Diego Velázquez, 1618
         </div>
     </div>
     <div class="flexbox-2">
@@ -500,7 +413,7 @@
     <div class="Michelangelo Adriaen Winslow">
         <img class="michelangeloimg Adriaenimg Winslowimg" src="images/Winslow_Homer_-_A_Basket_of_Clams.jpg">
         <div class="Michelangelo-text Adriaen-text Winslow-text">
-            <b>A Basket of Clams </b>, Winslow Homer, 1873
+            <b>A Basket of Clams </b><br> Winslow Homer, 1873
         </div>
     </div>
     <div class="flexbox-3">
@@ -528,109 +441,61 @@
     <footer>
         <div class="marquee">
             <div class="marquee-inner">
-                <span>SUN</span>
-
-                <span>SUN</span>
-
-                <span>SUN</span>
-
-                <span>SUN</span>
-
-                <span>SUN</span>
-
-                <span>SUN</span>
-
-                <span>SUN</span>
-
-                <span>SUN</span>
-
-                <span>SUN</span>
-
-                <span>SUN</span>
-
-                <span>SUN</span>
-
-                <span>SUN</span>
-
-                <span>SUN</span>
-
-                <span>SUN</span>
-
-
-
+                <span>Sun</span>
+                <span>Sun</span>
+                <span>Sun</span>
+                <span>Sun</span>
+                <span>Sun</span>
+                <span>Sun</span>
+                <span>Sun</span>
+                <span>Sun</span>
+                <span>Sun</span>
+                <span>Sun</span>
+                <span>Sun</span>
+                <span>Sun</span>
+                <span>Sun</span>
+                <span>Sun</span>
+                <span>Sun</span>
             </div>
         </div>
         <div class="marquee marquee-figs">
             <div class="marquee-inner marquee-inner-figs">
-                <span>FIGS</span>
-
-                <span>FIGS</span>
-
-                <span>FIGS</span>
-
-                <span>FIGS</span>
-
-                <span>FIGS</span>
-
-                <span>FIGS</span>
-
-                <span>FIGS</span>
-
-                <span>FIGS</span>
-
-                <span>FIGS</span>
-
-                <span>FIGS</span>
-
-                <span>FIGS</span>
-
-                <span>FIGS</span>
-
-                <span>FIGS</span>
-
-                <span>FIGS</span>
-
-                <span>FIGS</span>
-
-                <span>FIGS</span>
-
-                <span>FIGS</span>
-
-                <span>FIGS</span>
-
-                <span>FIGS</span>
-
-                <span>FIGS</span>
-
-
-
+                <span>Figs</span>
+                <span>Figs</span>
+                <span>Figs</span>
+                <span>Figs</span>
+                <span>Figs</span>
+                <span>Figs</span>
+                <span>Figs</span>
+                <span>Figs</span>
+                <span>Figs</span>
+                <span>Figs</span>
+                <span>Figs</span>
+                <span>Figs</span>
+                <span>Figs</span>
+                <span>Figs</span>
             </div>
         </div>
         <div class="marquee">
             <div class="marquee-inner">
-                <span>the fish shop</span>
-                <span>the fish shop</span>
-                <span>the fish shop</span>
-                <span>the fish shop</span>
-                <span>the fish shop</span>
-                <span>the fish shop</span>
-                <span>the fish shop</span>
-                <span>the fish shop</span>
-                <span>the fish shop</span>
-                <span>the fish shop</span>
-                <span>the fish shop</span>
-                <span>the fish shop</span>
-                <span>the fish shop</span>
-                <span>the fish shop</span>
-                <span>the fish shop</span>
-                <span>the fish shop</span>
-
-
-
-
-
-
-
+                <span>The Fish Shop</span>
+                <span>The Fish Shop</span>
+                <span>The Fish Shop</span>
+                <span>The Fish Shop</span>
+                <span>The Fish Shop</span>
+                <span>The Fish Shop</span>
+                <span>The Fish Shop</span>
+                <span>The Fish Shop</span>
+                <span>The Fish Shop</span>
+                <span>The Fish Shop</span>
+                <span>The Fish Shop</span>
+                <span>The Fish Shop</span>
+                <span>The Fish Shop</span>
+                <span>The Fish Shop</span>
+                <span>The Fish Shop</span>
+                <span>The Fish Shop</span>
+                <span>The Fish Shop</span>
+                <span>The Fish Shop</span>
             </div>
         </div>
 
